[gd_scene load_steps=4 format=3 uid="uid://ddghltif4t3fu"]

[ext_resource type="Script" path="res://_modules/timeline/video_track/video_track_head.gd" id="1_ph3m2"]
[ext_resource type="Texture2D" uid="uid://dydipb1rih3q0" path="res://assets/icons/lock_open.png" id="2_4i557"]
[ext_resource type="Texture2D" uid="uid://d30bq1k4fwyfw" path="res://assets/icons/visibility.png" id="3_177sx"]

[node name="VideoTrackHBox" type="HBoxContainer"]
theme_override_constants/separation = 3
alignment = 1
script = ExtResource("1_ph3m2")

[node name="TrackNameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
text = "V1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LockButton" type="Button" parent="."]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
icon = ExtResource("2_4i557")
flat = true
expand_icon = true

[node name="HideButton" type="Button" parent="."]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
icon = ExtResource("3_177sx")
flat = true
expand_icon = true

[connection signal="pressed" from="LockButton" to="." method="_on_lock_button_pressed"]
[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
